--- a/.gitattributes
+++ b/.gitattributes
@@ -4003,17 +4003,33 @@ rtl/watcom/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/watcom.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysdir.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysfile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysheap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/ascdef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/ascfun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/base.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/defines.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/errors.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/func.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/makefile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/messages.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/redef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/struct.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/unidef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/wininc/unifun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/winsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/crt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/dynlibs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/initc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/keyboard.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4024,32 +4040,17 @@ rtl/win32/printer.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/signals.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/sockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/win32res.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winevent.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/ascdef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/ascfun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/base.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/defines.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/errors.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/func.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/makefile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/messages.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/redef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/struct.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/unidef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wininc/unifun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/winsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsock2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsysut.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win64/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/arm/wprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
