--- a/.gitattributes
+++ b/.gitattributes
@@ -4954,6 +4954,7 @@ tests/test/cg/tnot.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tobjsiz2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tobjsize.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tpara1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/cg/tpara2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tprintf.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/traise1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/traise2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
