* added missing masking of upper 24/16 bits on ppc after performing     add/sub/shl/mul on 8 or 16 bit "registers" + test (tcinvint5)   * optimized register-register loading of < 32 bit values (removes     30KB of superfluous extsb/extsh/rlwinm's from compiler+rtl)
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@3207 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -4933,6 +4933,7 @@ tests/test/cg/tcnvint1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 tests/test/cg/tcnvint2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tcnvint3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tcnvint4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/cg/tcnvint5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tcnvptr.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tcnvset.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/cg/tcnvstr1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
