--- a/.gitattributes
+++ b/.gitattributes
@@ -4011,6 +4011,7 @@ rtl/win/sysos.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysosh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/wininc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/wininc/ascdef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4040,7 +4041,6 @@ rtl/win32/printer.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/signals.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/sockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/win32res.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4049,6 +4049,7 @@ rtl/win32/winsock2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsysut.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win64/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
