--- a/.gitattributes
+++ b/.gitattributes
@@ -4003,7 +4003,14 @@ rtl/watcom/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/watcom/watcom.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/crt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/dynlibs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/keyboard.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/messages.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/mouse.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/printer.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/sockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysdir.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysfile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysheap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4013,6 +4020,8 @@ rtl/win/systhrd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/sysutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/winevent.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/wininc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/wininc/ascdef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/wininc/ascfun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4027,25 +4036,16 @@ rtl/win/wininc/struct.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nativ
 rtl/win/wininc/unidef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/wininc/unifun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win/winsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/win/winsock2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/crt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/dynlibs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/initc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/keyboard.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/messages.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/mouse.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/objinc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/printer.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/signals.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/sockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/win32res.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/winevent.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/winsock2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsysut.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
