--- a/.gitattributes
+++ b/.gitattributes
@@ -967,15 +967,15 @@ fcl/unix/process.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/unix/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/unix/simpleipc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/win/eventlog.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/fclel.res svn_mime_002dtype=application%2Foctet-stream
+fcl/win/fileinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/httpapp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/win/pipes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/fclel.res svn_mime_002dtype=application%2Foctet-stream
-fcl/win32/fileinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/httpapp.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/process.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/simpleipc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/syncobjs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-fcl/win32/winreg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/process.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/simpleipc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/syncobjs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/win/winreg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/wince/eventlog.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/wince/fileinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/wince/pipes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
