--- a/.gitattributes
+++ b/.gitattributes
@@ -4062,6 +4062,7 @@ rtl/wince/arm/wprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/i386/wprt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/sockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/wince/wininc/ascfun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/wininc/coredll.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/winsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/wince/winsock2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
